[package]
name = "rust-esetupdater"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
http-body-util = "0.1.3"
hyper =  { version = "1.6.0", features = ["client", "http2"] }
hyper-rustls = "0.27.7"
hyper-tls = { version = "0.6.0", features = ["alpn", "vendored"] }
hyper-util = { version = "0.1.15", features = ["client", "tokio"] }
indexmap = { version = "2.9.0", features = ["serde"] }
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.140"
simplelog = "0.12.2"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.22"
