[package]
name = "rust-esetupdater"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive"] }
futures = "0.3.31"
http-body-util = "0.1.3"
hyper =  { version = "1.6.0", features = ["client", "http2"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["native-tokio", "http1", "http2", "tls12", "ring"] }
hyper-util = { version = "0.1.15", features = ["client", "tokio"] }
indexmap = { version = "2.9.0", features = ["serde"] }
indicatif = "0.18.0"
log = "0.4.27"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.140"
simplelog = "0.12.2"
tokio = { version = "1.46.1", features = ["fs", "macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.16", features = ["io"] }
toml = "0.8.22"

[profile.release]
opt-level = "z"     # Optimize for minimum binary size
lto = true          # Enable Link-Time Optimization (removes dead library code)
codegen-units = 1   # Reduces parallel compilation to maximize size optimizations
panic = "abort"     # Removes heavy panic unwinding string tables
strip = true        # Completely strips all symbols and debug info from the binary

